feat: made a part of markup with slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -16,7 +16,6 @@
                 <div class="header__logo">
                     <a href="/">SINGOLO<span>*</span></a>
                 </div>
-
                 <nav class="header__nav">
                     <ul>
                         <li><a>HOME</a></li>
@@ -30,9 +29,20 @@
     </header>
     <main>
         <div class = "slider">
-            <img src="" alt="">
-            <img src="./images/iPhone Vertical@1X.png" alt="iPhone">
-            <img src="./images/iPhone Horizontal@1X.png" alt="iPhone">
+            <img class="arrow" src="./images/chevleft.svg" alt="slideLeft">
+            <div class ="slider__iphoneVert">
+                <img src="./images/iPhone_Vertical.svg" alt="iPhone">
+                <img src="./images/Layerhorizontal.svg" alt="display">
+            </div>
+            <div class ="slider__iphoneHori">
+                <img src="./images/iPhone_Horizontal.svg" alt="iPhone">
+                <img src="./images/Layervertical.svg" alt="display">
+            </div>
+            <img class="arrow" src="./images/chevright.svg" alt="slideRight">
+        </div>
+
+        <div class="services">
+            
         </div>
     </main>
 </body>
