feat: add 'Our Services' and finish markup

--- a/singolo1.html
+++ b/singolo1.html
@@ -12,37 +12,77 @@
 
 <body>
     <header class="header">
-            <div class="header__wrapper">
-                <div class="header__logo">
-                    <a href="/">SINGOLO<span>*</span></a>
-                </div>
-                <nav class="header__nav">
-                    <ul>
-                        <li><a>HOME</a></li>
-                        <li><a>SERVICES</a></li>
-                        <li><a>PORTFOLIO</a></li>
-                        <li><a>ABOUT</a></li>
-                        <li><a>CONTACT</a></li>
-                    </ul>
-                </nav>
+        <div class="header__wrapper">
+            <div class="header__logo">
+                <a href="/">SINGOLO<span>*</span></a>
             </div>
+            <nav class="header__nav">
+                <ul>
+                    <li><a>HOME</a></li>
+                    <li><a>SERVICES</a></li>
+                    <li><a>PORTFOLIO</a></li>
+                    <li><a>ABOUT</a></li>
+                    <li><a>CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class = "slider">
-            <img class="arrow" src="./images/chevleft.svg" alt="slideLeft">
-            <div class ="slider__iphoneVert">
-                <img src="./images/iPhone_Vertical.svg" alt="iPhone">
-                <img src="./images/Layerhorizontal.svg" alt="display">
+        <div class="slider">
+            <img class="slider__arrow" src="./images/chevleft.svg" alt="Slide Left">
+            <div class="slider__iphoneVert">
+                <img src="./images/iPhone_Vertical.svg" alt="IPhone">
+                <img src="./images/Layerhorizontal.svg" alt="IPhone Screen">
             </div>
-            <div class ="slider__iphoneHori">
-                <img src="./images/iPhone_Horizontal.svg" alt="iPhone">
-                <img src="./images/Layervertical.svg" alt="display">
+            <!--class Name-->
+            <div class="slider__iphoneHori">
+                <img src="./images/iPhone_Horizontal.svg" alt="IPhone">
+                <img src="./images/Layervertical.svg" alt="IPhone Screen">
             </div>
-            <img class="arrow" src="./images/chevright.svg" alt="slideRight">
+            <img class="slider__arrow" src="./images/chevright.svg" alt="Slide Right">
         </div>
 
         <div class="services">
-            
+            <div class="services__info">
+                <h1>Our Services</h1>
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor<br> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                </p>
+            </div>
+            <!--class Name-->
+            <div class="benefits">
+                <img src="./images/pen.jpg" alt="pen">
+                <div class="grid-container">
+                    <h4>Custom Design</h4>
+                    <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                </div>
+                <img src="./images/bulb.jpg" alt="bulb">
+                <div class="grid-container">
+                    <h4>Inovative Ideas</h4>
+                    <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                </div>
+                <img src="./images/heart.jpg" alt="heart">
+                <div class="grid-container">
+                    <h4>Love Is The Answer</h4>
+                    <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                    </p>
+                </div>
+                <img src="./images/phone.jpg" alt="phone">
+                <div class="grid-container">
+                    <h4>Responsive Layout</h4>
+                    <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae- sent elit leo.
+                    </p>
+                </div>
+                <img src="./images/bubble.jpg" alt="bubble">
+                <div class="grid-container">
+                    <h4>24 / 7 Support</h4>
+                    <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen- tesque egestas venenatis lorem .</p>
+                </div>
+                <img src="./images/star.jpg" alt="star">
+                <div class="grid-container">
+                    <h4>Feel Like A Star</h4>
+                    <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
