--- a/singolo2.html
+++ b/singolo2.html
@@ -4,8 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./singolo2.css">
 </head>
 <body>
-    
+    <content>
+        <h2>Portfolio</h2>
+        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <ul>
+            <li>All</li>
+            <li>Web Design</li>
+            <li>Graphic Design</li>
+            <li>Artwork</li>
+        </ul>
+        <div class="content__grid-container">
+            <div><img src="./assets/ship.svg" alt="ship"></div>
+            <div><img src="./assets/girl.svg" alt="girl"></div>
+            <div><img src="./assets/town.svg" alt="town"></div>
+            <div><img src="./assets/Robot.svg" alt="robot"></div>
+            <div><img src="./assets/animals.svg" alt="animals"></div>
+            <div><img src="./assets/SDK.svg" alt="sdk"></div>
+            <div><img src="./assets/tracery.svg" alt="tracery"></div>
+            <div><img src="./assets/birds.svg" alt="birds"></div>
+            <div><img src="./assets/dragon.svg" alt="dragon"></div>
+            <div><img src="./assets/BeautifulFont.svg" alt="BeautifulFont"></div>
+            <div><img src="./assets/monster.svg" alt="monster"></div>
+            <div><img src="./assets/wall.svg" alt="wall"></div>
+        </div>
+    </content>
+    <div class="contacts">
+        <h2>About Us</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
+           ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+        </p>
+        <div class="contacts__flex-items">
+            <div>
+                <img src="./assets/photo1.svg" alt="woman">
+                <h4>Adam Jensen</h4>
+                <p>Quisque luctus, quam eget molestie commodo, lacus purus 
+                   cursus purus, nec rutrum tellus dolor id lorem.
+                </p>
+                <div class = "social-links">
+                    <img src="./assets/Facebook.svg" alt="Facebook">
+                    <img src="./assets/Google.svg" alt="Google">
+                    <img src="./assets/Twitter.svg" alt="Twitter">
+                    <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+                </div>
+            </div>
+            <div>
+                <img src="./assets/photo2.svg" alt="man">
+                <h4>Desmond Miles</h4>
+                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus
+                   in quam laoreet, viverra lacus ut, ultrices velit.
+                </p>
+                <div class = "social-links">
+                    <img src="./assets/Facebook.svg" alt="Facebook">
+                    <img src="./assets/Google.svg" alt="Google">
+                    <img src="./assets/Twitter.svg" alt="Twitter">
+                    <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+                </div>
+            </div>
+            <div>
+                <img src="./assets/photo3.svg" alt="woman">
+                <h4>Scolara Visari</h4>
+                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                   turpis, et consequat felis. Quisque condimentum.
+                </p>
+                <div class = "social-links">
+                    <img src="./assets/Facebook.svg" alt="Facebook">
+                    <img src="./assets/Google.svg" alt="Google">
+                    <img src="./assets/Twitter.svg" alt="Twitter">
+                    <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+                </div>
+            </div>
+        </div>
+    </div>         
 </body>
 </html>
