fix: paddings and font-sizes , can't connect fonts

--- a/singolo2.html
+++ b/singolo2.html
@@ -34,7 +34,7 @@
     </content>
     <div class="contacts">
         <h2>About Us</h2>
-        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor<br>
            ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
         </p>
         <div class="contacts__flex-items">
