feat: add header text and inputs

--- a/singolo3.html
+++ b/singolo3.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./singolo3.css">
 </head>
 <body>
-    
+    <form action="">
+    <h2>Get a Quote</h2>
+    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor<br>
+       ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+       <div class = "inputs">
+          <input class="input" type="text" placeholder="Name (Required)" required>
+          <input class="input" type="email" placeholder="Email (Required)" required>
+          <input class="input" type="text" placeholder="Subject">
+          <textarea class="input" rows="8" placeholder="Describe your project in detail..."></textarea>
+          <div class="contact-information">
+                <h3>Contact Information</h3>
+                <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver-<br>
+                   ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat<br> 
+                   libero. Nulla sed nunc et tortor luctus faucibus. Morbi at<br>
+                   aliquet turpis, et consequat felis. 
+                </p>
+          </div>
+       </div>
+    </form>
+    <footer>
+
+    </footer>
 </body>
 </html>
