feat: finish singolo3 task

--- a/singolo3.html
+++ b/singolo3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,56 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./singolo3.css">
 </head>
+
 <body>
     <form action="">
-    <h2>Get a Quote</h2>
-    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor<br>
-       ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-       <div class = "inputs">
-          <input class="input" type="text" placeholder="Name (Required)" required>
-          <input class="input" type="email" placeholder="Email (Required)" required>
-          <input class="input" type="text" placeholder="Subject">
-          <textarea class="input" rows="8" placeholder="Describe your project in detail..."></textarea>
-          <div class="contact-information">
+        <h2>Get a Quote</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+            erat porttitor<br>
+            ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+            nibh.</p>
+        <div class="inputs-contacts">
+        <div class="inputs">
+            <input class="input" type="text" placeholder="Name (Required)" required>
+            <input class="input" type="email" placeholder="Email (Required)" required>
+            <input class="input" type="text" placeholder="Subject">
+            <textarea class="input" rows="8" placeholder="Describe your project in detail..."></textarea>
+        </div>      
+            <div class="contact-information">
                 <h3>Contact Information</h3>
                 <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver-<br>
-                   ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat<br> 
-                   libero. Nulla sed nunc et tortor luctus faucibus. Morbi at<br>
-                   aliquet turpis, et consequat felis. 
+                    ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat<br>
+                    libero. Nulla sed nunc et tortor luctus faucibus. Morbi at<br>
+                    aliquet turpis, et consequat felis.
                 </p>
-          </div>
-       </div>
+                <a href="#">
+                    <img src="./assets/location.png" alt="">
+                    <span>Elm St. 14/05 Lost City</span>
+                </a>
+                <a href="tel:035283318635">
+                    <img src="./assets/phone.png" alt="">
+                    03528 331 86 35
+                </a>
+                <a href="mailto:info@singolo.com">
+                    <img src="./assets/email.png" alt="">
+                    info@singolo.com
+                </a>    
+            </div>
+          
+        </div>
+        </div>
     </form>
-    <footer>
-
+    <footer class="footer">
+        <div class="copyright">
+            <p>&copy; Copyright 2013</p>
+        </div>
+        <div class="footer__links">
+            <img src="./assets/Facebook.svg" alt="Facebook">
+            <img src="./assets/Google.svg" alt="Google">
+            <img src="./assets/Twitter.svg" alt="Twitter">
+            <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+        </div>
     </footer>
 </body>
+
 </html>
