fix: add cursors and submit button

--- a/singolo3.html
+++ b/singolo3.html
@@ -30,7 +30,7 @@
                     libero. Nulla sed nunc et tortor luctus faucibus. Morbi at<br>
                     aliquet turpis, et consequat felis.
                 </p>
-                <a href="#">
+                <a href="https://www.google.com/maps/search/+Elm+St.+14%2F05+Lost+City/@53.718879,27.986709,7z">
                     <img src="./assets/location.png" alt="">
                     <span>Elm St. 14/05 Lost City</span>
                 </a>
@@ -41,7 +41,8 @@
                 <a href="mailto:info@singolo.com">
                     <img src="./assets/email.png" alt="">
                     info@singolo.com
-                </a>    
+                </a>  
+                <button>Submit</button>  
             </div>
           
         </div>
