feat: upload singolo2

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <header class="header">
         <div class="header__wrapper">
             <div class="header__logo">
-                <a href ="#">SINGOLO<span>*</span></a>
+                <a href="#">SINGOLO<span>*</span></a>
             </div>
             <nav class="header__nav">
                 <ul>
-                    <li><a href ="#">HOME</a></li>
-                    <li><a href ="#">SERVICES</a></li>
-                    <li><a href ="#">PORTFOLIO</a></li>
-                    <li><a href ="#">ABOUT</a></li>
-                    <li><a href ="#">CONTACT</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,36 +43,43 @@
         <div class="services">
             <div class="services__info">
                 <h1>Our Services</h1>
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor<br> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus,
+                    nisi erat porttitor<br> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
+                    commodo, tortor mauris condimentum nibh.
                 </p>
             </div>
             <div class="services__benefits">
                 <img src="./assets/pen.jpg" alt="pen">
                 <div class="grid-container">
                     <h4>Custom Design</h4>
-                    <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                    <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                        ultrices velit.</p>
                 </div>
                 <img src="./assets/bulb.jpg" alt="bulb">
                 <div class="grid-container">
                     <h4>Inovative Ideas</h4>
-                    <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                    <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum tellus dolor
+                        id lorem.</p>
                 </div>
                 <img src="./assets/heart.jpg" alt="heart">
                 <div class="grid-container">
                     <h4>Love Is The Answer</h4>
-                    <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                    <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                        condimentum.
                     </p>
                 </div>
                 <img src="./assets/phone.jpg" alt="phone">
                 <div class="grid-container">
                     <h4>Responsive Layout</h4>
-                    <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae- sent elit leo.
+                    <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae- sent elit
+                        leo.
                     </p>
                 </div>
                 <img src="./assets/bubble.jpg" alt="bubble">
                 <div class="grid-container">
                     <h4>24 / 7 Support</h4>
-                    <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen- tesque egestas venenatis lorem .</p>
+                    <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen- tesque
+                        egestas venenatis lorem .</p>
                 </div>
                 <img src="./assets/star.jpg" alt="star">
                 <div class="grid-container">
@@ -82,6 +89,79 @@
             </div>
         </div>
     </main>
+    <content>
+        <h2>Portfolio</h2>
+        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <ul>
+            <li>All</li>
+            <li>Web Design</li>
+            <li>Graphic Design</li>
+            <li>Artwork</li>
+        </ul>
+        <div class="content__grid-container">
+            <div><img src="./assets/ship.svg" alt="ship"></div>
+            <div><img src="./assets/girl.svg" alt="girl"></div>
+            <div><img src="./assets/town.svg" alt="town"></div>
+            <div><img src="./assets/Robot.svg" alt="robot"></div>
+            <div><img src="./assets/animals.svg" alt="animals"></div>
+            <div><img src="./assets/SDK.svg" alt="sdk"></div>
+            <div><img src="./assets/tracery.svg" alt="tracery"></div>
+            <div><img src="./assets/birds.svg" alt="birds"></div>
+            <div><img src="./assets/dragon.svg" alt="dragon"></div>
+            <div><img src="./assets/BeautifulFont.svg" alt="BeautifulFont"></div>
+            <div><img src="./assets/monster.svg" alt="monster"></div>
+            <div><img src="./assets/wall.svg" alt="wall"></div>
+        </div>
+    </content>
+    <div class="contacts">
+        <h2>About Us</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+            erat porttitor<br>
+            ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+            nibh.
+        </p>
+        <div class="contacts__flex-items">
+            <div>
+                <img src="./assets/photo1.svg" alt="woman">
+                <h4>Adam Jensen</h4>
+                <p>Quisque luctus, quam eget molestie commodo, lacus purus
+                    cursus purus, nec rutrum tellus dolor id lorem.
+                </p>
+                <div class="social-links">
+                    <img src="./assets/Facebook.svg" alt="Facebook">
+                    <img src="./assets/Google.svg" alt="Google">
+                    <img src="./assets/Twitter.svg" alt="Twitter">
+                    <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+                </div>
+            </div>
+            <div>
+                <img src="./assets/photo2.svg" alt="man">
+                <h4>Desmond Miles</h4>
+                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus
+                    in quam laoreet, viverra lacus ut, ultrices velit.
+                </p>
+                <div class="social-links">
+                    <img src="./assets/Facebook.svg" alt="Facebook">
+                    <img src="./assets/Google.svg" alt="Google">
+                    <img src="./assets/Twitter.svg" alt="Twitter">
+                    <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+                </div>
+            </div>
+            <div>
+                <img src="./assets/photo3.svg" alt="woman">
+                <h4>Scolara Visari</h4>
+                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                    turpis, et consequat felis. Quisque condimentum.
+                </p>
+                <div class="social-links">
+                    <img src="./assets/Facebook.svg" alt="Facebook">
+                    <img src="./assets/Google.svg" alt="Google">
+                    <img src="./assets/Twitter.svg" alt="Twitter">
+                    <img src="./assets/LinkedIn.svg" alt="LinkedIn">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
