fix: phones turning off/on only on second press:)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
     <title>Singolo</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -39,7 +39,7 @@
                     <img class="phoneDisplay" src="./assets/Layervertical.svg" alt="IPhone Screen">
                 </div>
             </div>
-            <div class="slide-2">
+            <div class="slide-2 hidden-slide">
             </div>
             <img class="slider__arrow" id="arrowRight" src="./assets/chevright.svg" alt="Slide Right">
         </div>
